--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Rocky-Mountain-Oils-10/">https://chris-kherk.github.io/Rocky-Mountain-Oils-10/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-10/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-10/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-10/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-10/index.html</a><br>
+                <a target="_bLank" href="https://heartfelt-sherbet-0fe54e.netlify.app">https://heartfelt-sherbet-0fe54e.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
